--- a/pages/about.html
+++ b/pages/about.html
@@ -89,8 +89,7 @@
         </div>
         <h2>Adarsh Amrit</h2>
         <p>
-          Student, AI and ML Researcher, Aspiring Web Developer, Linux Kernel
-          Enthusiast
+          Student and Web Developer
         </p>
       </div>
       <div class="carousel-card">
